tests/pass/test-gram_funcs.frac
gram koch = {
    alphabet: [F, p, m],
    init: 'F p p F p p F',
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

main() {
    int koch = 3;
    draw(koch, 5);
    print(koch);
}
