tests/fail/gram_excess_alph.frac
gram koch = {
    alphabet: [F, p, m, Z],
    init: 'F p p F p p F',
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

main() {
    draw(koch, 6);
}
